--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "react-router-dom": "^7.13.0",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-dropzone": "^14.2.3"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.22.3",
+    "react-beautiful-dnd": "13.1.1",
+    "react-dropzone": "14.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
