--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.22.3",
     "react-beautiful-dnd": "13.1.1",
-    "react-dropzone": "14.2.3"
+    "react-dropzone": "14.2.3",
+    "firebase": "^12.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
