--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "6.22.3",
     "react-beautiful-dnd": "13.1.1",
     "react-dropzone": "14.2.3",
-    "firebase": "^12.9.0"
+    "firebase": "^12.9.0",
+    "@google/genai": "^1.41.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
